fix(Carousel): Update Carousel to use new RC2 animation api Animation api doesn't appear to work in IE or FF Breaking Change, carousel-item is now a component images must be wrapped in <div class="carousel-item>

--- a/src/components/Carousel/carousel.scss
+++ b/src/components/Carousel/carousel.scss
@@ -13,29 +13,8 @@
     display: block !important;
     overflow: hidden;
     
-    @include transition-timing-function(ease);
-    @include transition-duration($defaultAnimationSpeed);
-    @include transition-property(transform);
-    
-    img {
+    .item-content img {
         width: 100%;
         pointer-events: none;
-    }
-    
-    &.hide {
-        display: none !important;
-    }
-    
-    &.active {
-        display: block !important;
-        @include transform(translate(0,0));
-    }
-    
-    &.out-left {
-        @include transform(translate(-100%,0));
-    }
-    
-    &.out-right {
-        @include transform(translate(100%,0));
     }
 }
